# ImmunoForge

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: default_config.yaml
data/validation/: validation_dataset.json
immunoforge/: __init__.py  cli.py
immunoforge/core/: __init__.py  active_learning.py  af3_multimer.py  af3_scoring.py  affinity.py  antibody_formats.py  benchmark.py  codon_opt.py  developability.py  hotspot_predictor.py  immunogenicity.py  linker_design.py  maturation.py  multi_codon_opt.py  peptide_engager.py  ranking.py  sequence_optimizer.py  sequence_qc.py  structure_contacts.py  structure_diversity.py  structure_validation.py  target_db.py  utils.py  vesm.py  visualization.py
immunoforge/pipeline/: __init__.py  runner.py
immunoforge/pipeline/steps/: B1_target_prep.py  B2_rfdiffusion.py  B3_sequence_design.py  B3a_sequence_optimization.py  B3b_sequence_qc.py  B4_structure_validation.py  B4b_structure_deep.py  B4c_af2_multimer_filter.py  B5_binding_affinity.py  B5b_immunogenicity.py  B5c_maturation.py  B6_candidate_ranking.py  B6b_developability.py  B7_codon_optimization.py  B7b_multi_codon.py  B8_deliverables.py  B9_benchmark.py  B9a_af3_validation.py  B9b_affinity_maturation.py  __init__.py
immunoforge/server/: __init__.py  api.py  api_pipeline.py  app.py
immunoforge/server/static/: app.js  style.css
immunoforge/server/templates/: index.html  pipeline.html  results.html  targets.html
notebooks/: parameter_reference.ipynb
tests/: test_affinity.py  test_antibody_formats.py  test_cli.py  test_codon_opt.py  test_extensions.py  test_new_modules_smoke.py  test_ranking.py  test_round6_smoke.py  test_sequence_qc.py  test_target_db.py
