[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "immunoforge"
version = "0.1.0"
description = "De novo immune-cell-targeting protein design platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "ImmunoForge Team"},
]
keywords = ["protein-design", "immunology", "bispecific", "RFdiffusion", "ProteinMPNN"]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "biopython>=1.82",
    "pyyaml>=6.0",
    "requests>=2.28",
    "matplotlib>=3.7",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.6",
    "aiofiles>=23.0",
    "pydantic>=2.5",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.0",
]
dev = [
    "pytest>=7.0",
    "httpx>=0.27",
    "ruff>=0.3",
]

[project.scripts]
immunoforge = "immunoforge.cli:main"
immunoforge-server = "immunoforge.server.app:run_server"

[tool.setuptools.packages.find]
where = ["."]
include = ["immunoforge*"]

[tool.ruff]
line-length = 100
target-version = "py310"
